mark notebook as draft

--- a/.ipynb/[draft]2017-04-07_ussr-leaders-csv.ipynb
+++ b/.ipynb/[draft]2017-04-07_ussr-leaders-csv.ipynb
@@ -859,6 +859,210 @@
     "fig = go.Figure(data=data, layout=layout)\n",
     "iplot(fig, filename='ussr-leaders-life-bars')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "George Washington\n",
+      "John Adams\n",
+      "Thomas Jefferson\n",
+      "James Madison\n",
+      "James Monroe\n",
+      "John Quincy Adams\n",
+      "Andrew Jackson\n",
+      "Martin Van Buren\n",
+      "William Henry Harrison\n",
+      "John Tyler\n",
+      "James K. Polk\n",
+      "Zachary Taylor\n",
+      "Millard Fillmore\n",
+      "Franklin Pierce\n",
+      "James Buchanan\n",
+      "Abraham Lincoln\n",
+      "Andrew Johnson\n",
+      "Ulysses S. Grant\n",
+      "Rutherford B. Hayes\n",
+      "James A. Garfield\n",
+      "Chester A. Arthur\n",
+      "Grover Cleveland\n",
+      "Benjamin Harrison\n",
+      "Grover Cleveland (2nd term)\n",
+      "William McKinley\n",
+      "Theodore Roosevelt\n",
+      "William Howard Taft\n",
+      "Woodrow Wilson\n",
+      "Warren G. Harding\n",
+      "Calvin Coolidge\n",
+      "Herbert Hoover\n",
+      "Franklin D. Roosevelt\n",
+      "Harry S. Truman\n",
+      "Dwight D. Eisenhower\n",
+      "John F. Kennedy\n",
+      "Lyndon B. Johnson\n",
+      "Richard Nixon\n",
+      "Gerald Ford\n",
+      "Jimmy Carter\n",
+      "Ronald Reagan\n",
+      "George H. W. Bush\n",
+      "Bill Clinton\n",
+      "George W. Bush\n",
+      "Barack Obama\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Presidency</th>\n",
+       "      <th>President</th>\n",
+       "      <th>Wikipedia Entry</th>\n",
+       "      <th>Took office</th>\n",
+       "      <th>Left office</th>\n",
+       "      <th>Party</th>\n",
+       "      <th>Portrait</th>\n",
+       "      <th>Thumbnail</th>\n",
+       "      <th>Home State</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>26</td>\n",
+       "      <td>Theodore Roosevelt</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Theodore_Roosevelt</td>\n",
+       "      <td>14/9/1901</td>\n",
+       "      <td>4/3/1909</td>\n",
+       "      <td>Republican</td>\n",
+       "      <td>TheodoreRoosevelt.jpg</td>\n",
+       "      <td>thmb_TheodoreRoosevelt.jpg</td>\n",
+       "      <td>New York</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Woodrow Wilson</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Woodrow_Wilson</td>\n",
+       "      <td>4/03/1913</td>\n",
+       "      <td>4/03/1921</td>\n",
+       "      <td>Democratic</td>\n",
+       "      <td>WoodrowWilson.gif</td>\n",
+       "      <td>thmb_WoodrowWilson.gif</td>\n",
+       "      <td>New Jersey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>30</td>\n",
+       "      <td>Calvin Coolidge</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Calvin_Coolidge</td>\n",
+       "      <td>2/8/1923</td>\n",
+       "      <td>4/03/1929</td>\n",
+       "      <td>Republican</td>\n",
+       "      <td>CoolidgeWHPortrait.gif</td>\n",
+       "      <td>thmb_CoolidgeWHPortrait.gif</td>\n",
+       "      <td>Massachusetts</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>31</td>\n",
+       "      <td>Herbert Hoover</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Herbert_Hoover</td>\n",
+       "      <td>4/03/1929</td>\n",
+       "      <td>4/03/1933</td>\n",
+       "      <td>Republican</td>\n",
+       "      <td>HerbertHover.gif</td>\n",
+       "      <td>thmb_HerbertHover.gif</td>\n",
+       "      <td>Iowa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>32</td>\n",
+       "      <td>Franklin D. Roosevelt</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Franklin_D._Roose...</td>\n",
+       "      <td>4/03/1933</td>\n",
+       "      <td>12/4/1945</td>\n",
+       "      <td>Democratic</td>\n",
+       "      <td>FranklinDRoosevelt.gif</td>\n",
+       "      <td>thmb_FranklinDRoosevelt.gif</td>\n",
+       "      <td>New York</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Presidency              President   \\\n",
+       "25           26     Theodore Roosevelt   \n",
+       "27           28         Woodrow Wilson   \n",
+       "29           30        Calvin Coolidge   \n",
+       "30           31         Herbert Hoover   \n",
+       "31           32  Franklin D. Roosevelt   \n",
+       "\n",
+       "                                      Wikipedia Entry Took office   \\\n",
+       "25    http://en.wikipedia.org/wiki/Theodore_Roosevelt    14/9/1901   \n",
+       "27        http://en.wikipedia.org/wiki/Woodrow_Wilson    4/03/1913   \n",
+       "29       http://en.wikipedia.org/wiki/Calvin_Coolidge     2/8/1923   \n",
+       "30        http://en.wikipedia.org/wiki/Herbert_Hoover    4/03/1929   \n",
+       "31  http://en.wikipedia.org/wiki/Franklin_D._Roose...    4/03/1933   \n",
+       "\n",
+       "   Left office        Party                 Portrait  \\\n",
+       "25     4/3/1909  Republican    TheodoreRoosevelt.jpg   \n",
+       "27    4/03/1921  Democratic        WoodrowWilson.gif   \n",
+       "29    4/03/1929  Republican   CoolidgeWHPortrait.gif   \n",
+       "30    4/03/1933  Republican         HerbertHover.gif   \n",
+       "31    12/4/1945   Democratic  FranklinDRoosevelt.gif   \n",
+       "\n",
+       "                      Thumbnail     Home State  \n",
+       "25   thmb_TheodoreRoosevelt.jpg       New York  \n",
+       "27       thmb_WoodrowWilson.gif     New Jersey  \n",
+       "29  thmb_CoolidgeWHPortrait.gif  Massachusetts  \n",
+       "30        thmb_HerbertHover.gif           Iowa  \n",
+       "31  thmb_FranklinDRoosevelt.gif       New York  "
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "USA_PRESIDENTS_URL = 'https://raw.githubusercontent.com/boorstat/boorstat-files/master/politics/usa/usa-presidents.csv'\n",
+    "\n",
+    "df_usa = pd.read_csv(StringIO(requests.get(USA_PRESIDENTS_URL).text))\n",
+    "# df_usa.columns\n",
+    "\n",
+    "# list(df_usa.loc[['Left office ', 'Took office ']])\n",
+    "# df_usa[['Left office ', 'Home State']]\n",
+    "\n",
+    "def debug(v):\n",
+    "    print(v[1])\n",
+    "    return 'oo' in v[1]\n",
+    "\n",
+    "df_usa = df_usa[df_usa.apply(debug, axis=1)]\n",
+    "\n",
+    "# df_usa = df_usa.select(debug, axis=0)\n",
+    "df_usa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
