--- a/.ipynb/[draft]2017-04-22_usa-leaders-csv.ipynb
+++ b/.ipynb/[draft]2017-04-22_usa-leaders-csv.ipynb
@@ -1122,12 +1122,438 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "USSR_LEADERS_CSV = 'https://raw.githubusercontent.com/boorstat/boorstat-files/master/politics/ussr/ussr-leaders.csv'\n",
+    "USA_PRESIDENTS_CSV = 'https://raw.githubusercontent.com/boorstat/boorstat-files/master/politics/usa/usa-presidents.csv'\n",
+    "\n",
+    "from io import StringIO\n",
+    "\n",
+    "df_usa = pd.DataFrame.from_csv(StringIO(requests.get(USA_PRESIDENTS_CSV).text), index_col=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "hoverinfo": "name",
+         "line": {
+          "color": "#3c3b6e",
+          "shape": "hv",
+          "width": 4
+         },
+         "mode": "lines",
+         "name": "USA",
+         "type": "scatter",
+         "x": [
+          1799,
+          1826,
+          1826,
+          1831,
+          1836,
+          1841,
+          1845,
+          1848,
+          1849,
+          1850,
+          1862,
+          1862,
+          1865,
+          1868,
+          1869,
+          1874,
+          1875,
+          1881,
+          1885,
+          1886,
+          1893,
+          1901,
+          1901,
+          1908,
+          1908,
+          1919,
+          1923,
+          1924,
+          1930,
+          1933,
+          1945,
+          1963,
+          1964,
+          1969,
+          1972,
+          1973,
+          1994,
+          2004,
+          2006
+         ],
+         "y": [
+          67,
+          79,
+          80.33333333333333,
+          78.5,
+          79.8,
+          77.83333333333333,
+          77.85714285714286,
+          78.25,
+          75.55555555555556,
+          74.6,
+          74.36363636363636,
+          74.83333333333333,
+          73.38461538461539,
+          73.64285714285714,
+          73.06666666666666,
+          73.125,
+          72.76470588235294,
+          71.5,
+          71.05263157894737,
+          70.35,
+          70.38095238095238,
+          70.27272727272727,
+          69.73913043478261,
+          69.79166666666667,
+          69.84,
+          69.5,
+          69.07407407407408,
+          69.03571428571429,
+          69.17241379310344,
+          68.9,
+          68.70967741935483,
+          68,
+          68.66666666666667,
+          68.97058823529412,
+          69.51428571428572,
+          69.38888888888889,
+          69.70270270270271,
+          70.3157894736842,
+          70.8974358974359
+         ]
+        }
+       ],
+       "layout": {
+        "height": 600,
+        "legend": {
+         "orientation": "h"
+        },
+        "margin": {
+         "l": 30,
+         "r": 30
+        },
+        "showlegend": true,
+        "title": "Average Life Length of the USA Leaders and USSR leader",
+        "titlefont": {
+         "size": 20
+        },
+        "width": 600
+       }
+      },
+      "text/html": [
+       "<div id=\"76fe3920-8cb3-4783-8394-fa9a187493ad\" style=\"height: 600px; width: 600px;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"76fe3920-8cb3-4783-8394-fa9a187493ad\", [{\"name\": \"USA\", \"mode\": \"lines\", \"y\": [67.0, 79.0, 80.33333333333333, 78.5, 79.8, 77.83333333333333, 77.85714285714286, 78.25, 75.55555555555556, 74.6, 74.36363636363636, 74.83333333333333, 73.38461538461539, 73.64285714285714, 73.06666666666666, 73.125, 72.76470588235294, 71.5, 71.05263157894737, 70.35, 70.38095238095238, 70.27272727272727, 69.73913043478261, 69.79166666666667, 69.84, 69.5, 69.07407407407408, 69.03571428571429, 69.17241379310344, 68.9, 68.70967741935483, 68.0, 68.66666666666667, 68.97058823529412, 69.51428571428572, 69.38888888888889, 69.70270270270271, 70.3157894736842, 70.8974358974359], \"x\": [1799, 1826, 1826, 1831, 1836, 1841, 1845, 1848, 1849, 1850, 1862, 1862, 1865, 1868, 1869, 1874, 1875, 1881, 1885, 1886, 1893, 1901, 1901, 1908, 1908, 1919, 1923, 1924, 1930, 1933, 1945, 1963, 1964, 1969, 1972, 1973, 1994, 2004, 2006], \"line\": {\"width\": 4, \"color\": \"#3c3b6e\", \"shape\": \"hv\"}, \"type\": \"scatter\", \"hoverinfo\": \"name\"}], {\"height\": 600, \"margin\": {\"r\": 30, \"l\": 30}, \"titlefont\": {\"size\": 20}, \"title\": \"Average Life Length of the USA Leaders and USSR leader\", \"legend\": {\"orientation\": \"h\"}, \"width\": 600, \"showlegend\": true}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_usa = df_usa.copy()\n",
+    "\n",
+    "df_usa.dropna(inplace=True, axis=0)\n",
+    "\n",
+    "df_usa.sort_values(['death_date'], inplace=True)\n",
+    "\n",
+    "df_usa['birth_year'] = df_usa['birth_date'].map(\n",
+    "    lambda v: int(v.split('-')[0]))\n",
+    "\n",
+    "df_usa['death_year'] = df_usa['death_date'].map(\n",
+    "    lambda v: int(v.split('-')[0]))\n",
+    "\n",
+    "df_usa['life_len_years'] = df_usa[['birth_year', 'death_year']].apply(\n",
+    "    lambda v: v[1] - v[0], axis=1)\n",
+    "\n",
+    "# df_usa.iloc['life_len']\n",
+    "\n",
+    "df_usa['life_len_avg'] = [sum(df_usa['life_len_years'][:i + 1]) / (i + 1) for i in range(len(df_usa))]\n",
+    "\n",
+    "trace_usa = go.Scatter(\n",
+    "    x=df_usa['death_year'],\n",
+    "    y=df_usa['life_len_avg'],\n",
+    "    mode='lines',\n",
+    "    name=\"USA\",\n",
+    "    hoverinfo='name',\n",
+    "    line=dict(\n",
+    "        shape='hv',\n",
+    "        width=4,\n",
+    "        color='#3c3b6e'\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "data = [trace_usa]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title='Average Life Length of the USA Leaders and USSR leader',\n",
+    "    titlefont=dict(\n",
+    "        size=20),\n",
+    "    legend=dict(\n",
+    "        orientation='h'\n",
+    "    ),\n",
+    "    width=600,\n",
+    "    height=600,\n",
+    "    showlegend=True,\n",
+    "    margin={'l': 30, 'r': 30},\n",
+    "#     xaxis={\n",
+    "#         'autorange': False,\n",
+    "#         'range': [0, 100],\n",
+    "#         'title': '<a href=\"https://boorstat.github.io/lit/russian/2017/03/25/russian-writers-csv.html\">Link to source</a>'\n",
+    "#     },\n",
+    "#     yaxis=dict(\n",
+    "#         tickfont=dict(\n",
+    "#             color='#FFF')\n",
+    "#     )\n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "iplot(fig, filename='usa-ussr-leaders-life-length')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df_ussr = pd.DataFrame.from_csv(StringIO(requests.get(USSR_LEADERS_CSV).text), index_col=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "hoverinfo": "name",
+         "line": {
+          "color": "#3c3b6e",
+          "shape": "hv",
+          "width": 4
+         },
+         "mode": "lines",
+         "name": "USA",
+         "type": "scatter",
+         "x": [
+          1799,
+          1826,
+          1826,
+          1831,
+          1836,
+          1841,
+          1845,
+          1848,
+          1849,
+          1850,
+          1862,
+          1862,
+          1865,
+          1868,
+          1869,
+          1874,
+          1875,
+          1881,
+          1885,
+          1886,
+          1893,
+          1901,
+          1901,
+          1908,
+          1908,
+          1919,
+          1923,
+          1924,
+          1930,
+          1933,
+          1945,
+          1963,
+          1964,
+          1969,
+          1972,
+          1973,
+          1994,
+          2004,
+          2006
+         ],
+         "y": [
+          67,
+          79,
+          80.33333333333333,
+          78.5,
+          79.8,
+          77.83333333333333,
+          77.85714285714286,
+          78.25,
+          75.55555555555556,
+          74.6,
+          74.36363636363636,
+          74.83333333333333,
+          73.38461538461539,
+          73.64285714285714,
+          73.06666666666666,
+          73.125,
+          72.76470588235294,
+          71.5,
+          71.05263157894737,
+          70.35,
+          70.38095238095238,
+          70.27272727272727,
+          69.73913043478261,
+          69.79166666666667,
+          69.84,
+          69.5,
+          69.07407407407408,
+          69.03571428571429,
+          69.17241379310344,
+          68.9,
+          68.70967741935483,
+          68,
+          68.66666666666667,
+          68.97058823529412,
+          69.51428571428572,
+          69.38888888888889,
+          69.70270270270271,
+          70.3157894736842,
+          70.8974358974359
+         ]
+        },
+        {
+         "hoverinfo": "name",
+         "line": {
+          "color": "#c00",
+          "shape": "hv",
+          "width": 4
+         },
+         "mode": "lines",
+         "name": "USSR",
+         "type": "scatter",
+         "x": [
+          1924,
+          1953,
+          1971,
+          1982,
+          1984,
+          1985,
+          1988,
+          2010
+         ],
+         "y": [
+          54,
+          64.5,
+          68.66666666666667,
+          70.5,
+          70.4,
+          71,
+          73.14285714285714,
+          73.125
+         ]
+        }
+       ],
+       "layout": {
+        "height": 600,
+        "legend": {
+         "orientation": "h"
+        },
+        "margin": {
+         "l": 30,
+         "r": 30
+        },
+        "showlegend": true,
+        "title": "Average Life Span of the USA Presidents and USSR leaders",
+        "titlefont": {
+         "size": 20
+        },
+        "width": 600
+       }
+      },
+      "text/html": [
+       "<div id=\"d25bff64-4f95-47e7-b123-80956a14329c\" style=\"height: 600px; width: 600px;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d25bff64-4f95-47e7-b123-80956a14329c\", [{\"name\": \"USA\", \"mode\": \"lines\", \"y\": [67.0, 79.0, 80.33333333333333, 78.5, 79.8, 77.83333333333333, 77.85714285714286, 78.25, 75.55555555555556, 74.6, 74.36363636363636, 74.83333333333333, 73.38461538461539, 73.64285714285714, 73.06666666666666, 73.125, 72.76470588235294, 71.5, 71.05263157894737, 70.35, 70.38095238095238, 70.27272727272727, 69.73913043478261, 69.79166666666667, 69.84, 69.5, 69.07407407407408, 69.03571428571429, 69.17241379310344, 68.9, 68.70967741935483, 68.0, 68.66666666666667, 68.97058823529412, 69.51428571428572, 69.38888888888889, 69.70270270270271, 70.3157894736842, 70.8974358974359], \"x\": [1799, 1826, 1826, 1831, 1836, 1841, 1845, 1848, 1849, 1850, 1862, 1862, 1865, 1868, 1869, 1874, 1875, 1881, 1885, 1886, 1893, 1901, 1901, 1908, 1908, 1919, 1923, 1924, 1930, 1933, 1945, 1963, 1964, 1969, 1972, 1973, 1994, 2004, 2006], \"line\": {\"width\": 4, \"color\": \"#3c3b6e\", \"shape\": \"hv\"}, \"type\": \"scatter\", \"hoverinfo\": \"name\"}, {\"name\": \"USSR\", \"mode\": \"lines\", \"y\": [54.0, 64.5, 68.66666666666667, 70.5, 70.4, 71.0, 73.14285714285714, 73.125], \"x\": [1924.0, 1953.0, 1971.0, 1982.0, 1984.0, 1985.0, 1988.0, 2010.0], \"line\": {\"width\": 4, \"color\": \"#c00\", \"shape\": \"hv\"}, \"type\": \"scatter\", \"hoverinfo\": \"name\"}], {\"height\": 600, \"margin\": {\"r\": 30, \"l\": 30}, \"titlefont\": {\"size\": 20}, \"title\": \"Average Life Span of the USA Presidents and USSR leaders\", \"legend\": {\"orientation\": \"h\"}, \"width\": 600, \"showlegend\": true}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_ussr = df_ussr.copy()\n",
+    "\n",
+    "df_ussr.dropna(inplace=True, axis=0)\n",
+    "\n",
+    "df_ussr.sort_values(['death_year'], inplace=True)\n",
+    "\n",
+    "df_ussr['life_len_years'] = df_ussr[['birth_year', 'death_year']].apply(\n",
+    "    lambda v: v[1] - v[0], axis=1)\n",
+    "\n",
+    "\n",
+    "df_ussr['life_len_avg'] = [sum(df_ussr['life_len_years'][:i + 1]) / (i + 1) for i in range(len(df_ussr))]\n",
+    "\n",
+    "trace_ussr = go.Scatter(\n",
+    "    x=df_ussr['death_year'],\n",
+    "    y=df_ussr['life_len_avg'],\n",
+    "    mode='lines',\n",
+    "    name=\"USSR\",\n",
+    "    hoverinfo='name',\n",
+    "    line=dict(\n",
+    "        shape='hv',\n",
+    "        width=4,\n",
+    "        color='#c00'\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "data = [trace_usa, trace_ussr]\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title='Average Life Span of the USA Presidents and USSR leaders',\n",
+    "    titlefont=dict(\n",
+    "        size=20),\n",
+    "    legend=dict(\n",
+    "        orientation='h'\n",
+    "    ),\n",
+    "    width=600,\n",
+    "    height=600,\n",
+    "    showlegend=True,\n",
+    "    margin={'l': 30, 'r': 30},\n",
+    "#     xaxis={\n",
+    "#         'autorange': False,\n",
+    "#         'range': [0, 100],\n",
+    "#         'title': '<a href=\"https://boorstat.github.io/lit/russian/2017/03/25/russian-writers-csv.html\">Link to source</a>'\n",
+    "#     },\n",
+    "#     yaxis=dict(\n",
+    "#         tickfont=dict(\n",
+    "#             color='#FFF')\n",
+    "#     )\n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "iplot(fig, filename='usa-ussr-leaders-life-length')"
+   ]
   }
  ],
  "metadata": {
