--- a/.ipynb/[draft]2017-04-22_usa-leaders-csv.ipynb
+++ b/.ipynb/[draft]2017-04-22_usa-leaders-csv.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1793,15 +1793,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "opacity": 0,
+         "orientation": "h",
+         "type": "bar",
+         "x": [
+          1905.083
+         ],
+         "y": [
+          "Revolutions"
+         ]
+        },
+        {
+         "marker": {
+          "color": [
+           "red"
+          ]
+         },
+         "name": "Revolutions",
+         "orientation": "h",
+         "type": "bar",
+         "x": [
+          2.49799999999982
+         ],
+         "y": [
+          "Revolutions"
+         ]
+        },
+        {
+         "opacity": 0,
+         "orientation": "h",
+         "type": "bar",
+         "x": [
+          9.50200000000018
+         ],
+         "y": [
+          "Revolutions"
+         ]
+        },
+        {
+         "marker": {
+          "color": [
+           "red"
+          ]
+         },
+         "name": "Revolutions",
+         "orientation": "h",
+         "type": "bar",
+         "x": [
+          0.7469999999998436
+         ],
+         "y": [
+          "Revolutions"
+         ]
+        },
+        {
+         "marker": {
+          "color": [
+           "#fff",
+           "#3c3b6e",
+           "red",
+           "yellow"
+          ]
+         },
+         "name": "Government",
+         "orientation": "h",
+         "type": "bar",
+         "x": [
+          1900,
+          17.083000000000084,
+          0.7469999999998436,
+          5.166000000000167
+         ],
+         "y": [
+          "Government",
+          "Government",
+          "Government",
+          "Government",
+          "Government"
+         ]
+        },
+        {
+         "marker": {
+          "color": [
+           "red"
+          ]
+         },
+         "name": "Government",
+         "orientation": "h",
+         "type": "bar",
+         "width": 2.83,
+         "x": [
+          80
+         ],
+         "y": [
+          "Government"
+         ]
+        },
+        {
+         "opacity": 0,
+         "orientation": "h",
+         "type": "bar",
+         "x": [
+          1914.581
+         ],
+         "y": [
+          "Wars"
+         ]
+        },
+        {
+         "marker": {
+          "color": [
+           "black"
+          ]
+         },
+         "name": "Wars",
+         "orientation": "h",
+         "type": "bar",
+         "x": [
+          4.332000000000107
+         ],
+         "y": [
+          "Wars"
+         ]
+        }
+       ],
+       "layout": {
+        "annotations": [
+         {
+          "font": {
+           "color": "white",
+           "family": "Arial",
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "Tsar Nicholas II",
+          "x": 0.2,
+          "xanchor": "left",
+          "xref": "paper",
+          "y": 1,
+          "yanchor": "middle"
+         },
+         {
+          "font": {
+           "color": "black",
+           "family": "Arial",
+           "size": 13
+          },
+          "showarrow": false,
+          "text": "Provisional",
+          "textangle": -90,
+          "x": 0.57,
+          "xanchor": "left",
+          "xref": "paper",
+          "y": 1,
+          "yanchor": "middle"
+         },
+         {
+          "font": {
+           "color": "black",
+           "family": "Arial",
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "Soviet of<br>Workers<br>and<br>Soldiers<br>Deputies",
+          "x": 0.62,
+          "xanchor": "left",
+          "xref": "paper",
+          "y": 1,
+          "yanchor": "middle"
+         },
+         {
+          "font": {
+           "color": "red",
+           "family": "Arial",
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "First<br>World<br>War",
+          "x": 0.527,
+          "xanchor": "left",
+          "xref": "paper",
+          "y": 2,
+          "yanchor": "middle"
+         },
+         {
+          "font": {
+           "color": "yellow",
+           "family": "Arial",
+           "size": 32
+          },
+          "showarrow": false,
+          "text": "<b>USSR</b>",
+          "x": 0.8,
+          "xanchor": "left",
+          "xref": "paper",
+          "y": 1,
+          "yanchor": "middle"
+         }
+        ],
+        "barmode": "stack",
+        "height": 600,
+        "legend": {
+         "orientation": "h"
+        },
+        "margin": {
+         "l": 30,
+         "r": 30
+        },
+        "showlegend": false,
+        "title": "20 years before USSR",
+        "titlefont": {
+         "size": 20
+        },
+        "width": 600,
+        "xaxis": {
+         "autorange": false,
+         "range": [
+          1899.5,
+          1930
+         ]
+        },
+        "yaxis": {
+         "tickangle": -90
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"20dc1362-7f8b-4582-87ac-9b49688b8617\" style=\"height: 600px; width: 600px;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"20dc1362-7f8b-4582-87ac-9b49688b8617\", [{\"type\": \"bar\", \"x\": [1905.083], \"y\": [\"Revolutions\"], \"orientation\": \"h\", \"opacity\": 0}, {\"type\": \"bar\", \"x\": [2.49799999999982], \"y\": [\"Revolutions\"], \"marker\": {\"color\": [\"red\"]}, \"orientation\": \"h\", \"name\": \"Revolutions\"}, {\"type\": \"bar\", \"x\": [9.50200000000018], \"y\": [\"Revolutions\"], \"orientation\": \"h\", \"opacity\": 0}, {\"type\": \"bar\", \"x\": [0.7469999999998436], \"y\": [\"Revolutions\"], \"marker\": {\"color\": [\"red\"]}, \"orientation\": \"h\", \"name\": \"Revolutions\"}, {\"type\": \"bar\", \"x\": [1900, 17.083000000000084, 0.7469999999998436, 5.166000000000167], \"y\": [\"Government\", \"Government\", \"Government\", \"Government\", \"Government\"], \"marker\": {\"color\": [\"#fff\", \"#3c3b6e\", \"red\", \"yellow\"]}, \"orientation\": \"h\", \"name\": \"Government\"}, {\"type\": \"bar\", \"y\": [\"Government\"], \"x\": [80], \"marker\": {\"color\": [\"red\"]}, \"orientation\": \"h\", \"name\": \"Government\", \"width\": 2.83}, {\"type\": \"bar\", \"x\": [1914.581], \"y\": [\"Wars\"], \"orientation\": \"h\", \"opacity\": 0}, {\"type\": \"bar\", \"x\": [4.332000000000107], \"y\": [\"Wars\"], \"marker\": {\"color\": [\"black\"]}, \"orientation\": \"h\", \"name\": \"Wars\"}], {\"barmode\": \"stack\", \"showlegend\": false, \"title\": \"20 years before USSR\", \"width\": 600, \"titlefont\": {\"size\": 20}, \"annotations\": [{\"xref\": \"paper\", \"x\": 0.2, \"y\": 1, \"font\": {\"family\": \"Arial\", \"color\": \"white\", \"size\": 16}, \"yanchor\": \"middle\", \"xanchor\": \"left\", \"showarrow\": false, \"text\": \"Tsar Nicholas II\"}, {\"xref\": \"paper\", \"x\": 0.57, \"y\": 1, \"font\": {\"family\": \"Arial\", \"color\": \"black\", \"size\": 13}, \"yanchor\": \"middle\", \"xanchor\": \"left\", \"showarrow\": false, \"text\": \"Provisional\", \"textangle\": -90}, {\"xref\": \"paper\", \"x\": 0.62, \"y\": 1, \"font\": {\"family\": \"Arial\", \"color\": \"black\", \"size\": 16}, \"yanchor\": \"middle\", \"xanchor\": \"left\", \"showarrow\": false, \"text\": \"Soviet of<br>Workers<br>and<br>Soldiers<br>Deputies\"}, {\"xref\": \"paper\", \"x\": 0.527, \"y\": 2, \"font\": {\"family\": \"Arial\", \"color\": \"red\", \"size\": 16}, \"yanchor\": \"middle\", \"xanchor\": \"left\", \"showarrow\": false, \"text\": \"First<br>World<br>War\"}, {\"xref\": \"paper\", \"x\": 0.8, \"y\": 1, \"font\": {\"family\": \"Arial\", \"color\": \"yellow\", \"size\": 32}, \"yanchor\": \"middle\", \"xanchor\": \"left\", \"showarrow\": false, \"text\": \"<b>USSR</b>\"}], \"yaxis\": {\"tickangle\": -90}, \"xaxis\": {\"range\": [1899.5, 1930], \"autorange\": false}, \"height\": 600, \"legend\": {\"orientation\": \"h\"}, \"margin\": {\"r\": 30, \"l\": 30}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# revolutions\n",
     "revolution_1905 = ((1905, 1), (1907, 7))\n",
     "revolution_1917 = ((1917, 1), (1917, 10))\n",
+    "revolutions_interval = ((1907, 7), (1917, 1))\n",
     "\n",
     "# at the head\n",
     "# Tsar Nicholas II\n",
@@ -1817,7 +2056,155 @@
     "\n",
     "# First World War\n",
     "ww1 = ((1914, 7), (1918, 11))\n",
-    "\n"
+    "\n",
+    "MONTH_PERIOD = 0.083\n",
+    "\n",
+    "def get_period(entity):\n",
+    "    return (entity[1][0] + MONTH_PERIOD * entity[1][1]) - (entity[0][0] + MONTH_PERIOD * entity[0][1])\n",
+    "\n",
+    "\n",
+    "government = go.Bar(\n",
+    "#     y=df_bars['name'],\n",
+    "    y=['Government'] * 5,\n",
+    "    x=[1900, get_period(tsar), get_period(temp), get_period(soviet)],\n",
+    "    name='Government',\n",
+    "    orientation = 'h',\n",
+    "    marker={\n",
+    "        'color': ['#fff', '#3c3b6e', 'red', 'yellow']})\n",
+    "\n",
+    "government_ussr = go.Bar(\n",
+    "    y=['Government'] ,\n",
+    "    x=[80],\n",
+    "    name='Government',\n",
+    "    orientation = 'h',\n",
+    "    width=2.83,\n",
+    "    marker={\n",
+    "        'color': ['red']})\n",
+    "\n",
+    "wars_offset = go.Bar(\n",
+    "    y=['Wars'],\n",
+    "    x=[ww1[0][0] + MONTH_PERIOD * ww1[0][1]],\n",
+    "    opacity=0,\n",
+    "    orientation = 'h')\n",
+    "\n",
+    "wars = go.Bar(\n",
+    "    y=['Wars'],\n",
+    "    x=[get_period(ww1)],\n",
+    "    name='Wars',\n",
+    "    orientation = 'h',\n",
+    "    marker={\n",
+    "        'color': ['black']})\n",
+    "\n",
+    "revolution_1905_offset = go.Bar(\n",
+    "    y=['Revolutions'],\n",
+    "    x=[revolution_1905[0][0] + MONTH_PERIOD * revolution_1905[0][1]],\n",
+    "    orientation = 'h',\n",
+    "    opacity=0)\n",
+    "\n",
+    "revolution_1917_offset = go.Bar(\n",
+    "    y=['Revolutions'],\n",
+    "    x=[get_period(revolutions_interval)],\n",
+    "    orientation = 'h',\n",
+    "    opacity=0)\n",
+    "\n",
+    "revolution_1905_bar = go.Bar(\n",
+    "    y=['Revolutions'],\n",
+    "    x=[get_period(revolution_1905)],\n",
+    "    name='Revolutions',\n",
+    "    orientation = 'h',\n",
+    "    marker={\n",
+    "        'color': ['red']})\n",
+    "\n",
+    "revolution_1917_bar = go.Bar(\n",
+    "    y=['Revolutions'],\n",
+    "    x=[get_period(revolution_1917)],\n",
+    "    name='Revolutions',\n",
+    "    orientation = 'h',\n",
+    "    marker={\n",
+    "        'color': ['red']})\n",
+    "\n",
+    "data = [revolution_1905_offset, revolution_1905_bar,\n",
+    "        revolution_1917_offset, revolution_1917_bar,\n",
+    "        government, government_ussr,\n",
+    "        wars_offset, wars]\n",
+    "\n",
+    "annotations = [\n",
+    "    dict(\n",
+    "        xref='paper', x=0.2, y=1,\n",
+    "        xanchor='left', yanchor='middle',\n",
+    "        text='Tsar Nicholas II',\n",
+    "        font=dict(\n",
+    "            family='Arial',\n",
+    "            size=16,\n",
+    "            color='white'),\n",
+    "        showarrow=False),\n",
+    "    dict(\n",
+    "        xref='paper', x=0.57, y=1,\n",
+    "        xanchor='left', yanchor='middle',\n",
+    "        text='Provisional',\n",
+    "        textangle=-90,\n",
+    "        font=dict(\n",
+    "            family='Arial',\n",
+    "            size=13,\n",
+    "            color='black'),\n",
+    "        showarrow=False),\n",
+    "    dict(\n",
+    "        xref='paper', x=0.62, y=1,\n",
+    "        xanchor='left', yanchor='middle',\n",
+    "        text='Soviet of<br>Workers<br>and<br>Soldiers<br>Deputies',\n",
+    "        font=dict(\n",
+    "            family='Arial',\n",
+    "            size=16,\n",
+    "            color='black'),\n",
+    "        showarrow=False),\n",
+    "    dict(\n",
+    "        xref='paper', x=0.527, y=2,\n",
+    "        xanchor='left', yanchor='middle',\n",
+    "        text='First<br>World<br>War',\n",
+    "        font=dict(\n",
+    "            family='Arial',\n",
+    "            size=16,\n",
+    "            color='red'),\n",
+    "        showarrow=False),\n",
+    "    dict(\n",
+    "        xref='paper', x=0.8, y=1,\n",
+    "        xanchor='left', yanchor='middle',\n",
+    "        text='<b>USSR</b>',\n",
+    "        font=dict(\n",
+    "            family='Arial',\n",
+    "            size=32,\n",
+    "            color='yellow'),\n",
+    "        showarrow=False)\n",
+    "\n",
+    "]\n",
+    "\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    title='20 years before USSR',\n",
+    "    titlefont=dict(\n",
+    "        size=20),\n",
+    "    legend=dict(\n",
+    "        orientation='h'\n",
+    "    ),\n",
+    "    barmode='stack',\n",
+    "    annotations=annotations,\n",
+    "    width=600,\n",
+    "    height=600,\n",
+    "    showlegend=False,\n",
+    "    margin={'l': 30, 'r': 30},\n",
+    "    xaxis={\n",
+    "        'autorange': False,\n",
+    "        'range': [1899.5, 1930]\n",
+    "    },\n",
+    "    yaxis=dict(\n",
+    "        tickangle=-90\n",
+    "#         tickfont=dict(\n",
+    "#             color='#FFF')\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data=data, layout=layout)\n",
+    "iplot(fig, filename='20-years-before-ussr')"
    ]
   }
  ],
